test/compile-fail/resolution/use/super-super/top.rhdl
mod a {
    use super::super::*;
}
